--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Integral Banner</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -31,11 +31,11 @@
 
 <script>
     function Init(el, bg, img) {
-        this.el = el
+        this.el = el;
         this.canvas = this.el.querySelector('.canvas');
         this.ctx = this.canvas.getContext('2d');
         this.x = 0;
-        this.canAnim = false
+        this.canAnim = false;
         this.H = this.el.clientHeight || this.el.innerHeight;
         this.W = this.el.clientWidth || this.el.innerWidth;
 
@@ -45,17 +45,17 @@
         // this.rounds = rounds
         // this.disposition = disposition
         this.oval = new Image();
-        this.oval.src = 'img/oval.png'
+        this.oval.src = 'img/oval.png';
 
-        this.img = new Image()
-        this.img.src = img
-
-
-        this.bg = new Image()
+        this.img = new Image();
+        this.img.src = img;
 
 
-        this.bg.src = bg
-        this.render()
+        this.bg = new Image();
+
+
+        this.bg.src = bg;
+        this.render();
 
         setTimeout(()=>{
             this.canAnim = true
@@ -63,7 +63,7 @@
     }
 
     Init.prototype.render = function () {
-            _th = this
+            _th = this;
 
         function draw() {
             _th.ctx.clearRect(0, 0, _th.W, _th.H);
@@ -73,7 +73,7 @@
 
 
             if(_th.canAnim) {
-                _th.x +=10
+                _th.x +=10;
                 c = rendCanv(_th.oval, _th.W/2, _th.H /2, _th.img, _th.x);
 
                 _th.ctx.drawImage(c, 0, 0);
@@ -98,7 +98,7 @@
         draw()
 
 
-    }
+    };
 var z = new Init(document.querySelector('.canvas-wrap'), 'img/frame.jpg', 'img/bg.jpg')
 
 </script>
