--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Integral Banner</title>
+    <title>Integral Banner 728 80</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div id="container" style="position: absolute;left: 0;bottom: 0;width: 100%;height: 100%;">
     <div id="player_container" class="player_container">
-        <div class="canvas-wrap" style="width: 969px; height:250px">
+        <div class="canvas-wrap" style="width: 728px; height:200px">
             <canvas class="canvas"></canvas>
         </div>
 
         <div class="town-text" id="town-text">
-            <img src="./img/logo.png" alt="logo">
+            <img src="./img/logo.png" alt="logo" class="logoLeft">
             <div class="buttonRoom">
                 <a href="#" class="room">Обрати квартиру</a>
-                <img src="./img/intBud.png" alt="">
+                <img src="./img/intBud.png" alt="integrall bud" class="logoRight">
             </div>
             <span class="arch01">УНІКАЛЬНА АРХІТЕКТУРА</span>
             <span class="arch02">Краєвиди на &#8249;&#8249;Батьківщину - Мати&#8250;&#8250;</span>
