--- a/size/250x250/index.html
+++ b/size/250x250/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="ad.size" content="width=250,height=250">
     <title>Integral Banner 250 250</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
