--- a/size/336x280/index.html
+++ b/size/336x280/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Integral Banner 336 280</title>
+    <meta name="ad.size" content="width=336,height=280">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
