--- a/size/468x61/index.html
+++ b/size/468x61/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Integral Banner 468 60</title>
+    <meta name="ad.size" content="width=468,height=60">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
