--- a/size/728x80/index.html
+++ b/size/728x80/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Integral Banner 728 80</title>
+    <meta name="ad.size" content="width=728,height=80">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
