--- a/banner/970x250/index.html
+++ b/banner/970x250/index.html
@@ -242,6 +242,10 @@
             align-items: center;
             border-radius: 30px;
         }
+        .banner__button img {
+            position: absolute;
+            right: 20px;
+        }
     </style>
 </head>
 <body>
@@ -333,7 +337,7 @@
         </div>
         <div class="banner__content">
             <div class="banner__logo">
-                <img src="img/logo.svg" alt="logo">
+                <img src="img/logo.png" alt="logo">
             </div>
             <div class="banner__text">
                 <div class="banner__text-content visible">
@@ -349,6 +353,7 @@
         </div>
         <div class="banner__button">
             <a href="#"><span>Обрати квартиру</span></a>
+            <img src="img/intBud.png" alt="integral bud">
         </div>
     </div>
 
@@ -432,7 +437,7 @@
                     }
 
                     svg[0].classList.add('visible');
-                    text[0].classList.add('visible');
+                   // text[0].classList.add('visible');
                     clearInterval(int);
                     setTimeout(function () {
                         buttonWrapper.classList.add('isVisible');
