--- a/banner/970x250/index.html
+++ b/banner/970x250/index.html
@@ -245,6 +245,7 @@
         .banner__button img {
             position: absolute;
             right: 20px;
+            opacity: 0.8;
         }
     </style>
 </head>
