--- a/banner/468x60/index.html
+++ b/banner/468x60/index.html
@@ -127,7 +127,7 @@
             color: #989898;
             font-size: 14px;
             line-height: 1.2;
-            font-weight: 300;
+            font-weight: 400;
         }
         .banner__text-content.visible {
             opacity: 1;
@@ -241,6 +241,12 @@
             align-items: center;
             border-radius: 30px;
         }
+        .banner__button img {
+            position: absolute;
+            right: 20px;
+            width: 130px;
+        }
+
     </style>
 </head>
 <body>
@@ -348,6 +354,7 @@
     </div>
     <div class="banner__button">
         <a href="#"><span>Обрати квартиру</span></a>
+        <img src="img/intBud.png" alt="integral bud">
     </div>
 </div>
 
@@ -431,7 +438,7 @@
                 }
 
                 svg[0].classList.add('visible');
-                text[0].classList.add('visible');
+               // text[0].classList.add('visible');
                 clearInterval(int);
                 setTimeout(function () {
                     buttonWrapper.classList.add('isVisible');
