--- a/banner/200x300/index.html
+++ b/banner/200x300/index.html
@@ -83,7 +83,7 @@
             padding-top: 10px;
         }
         .banner__logo img {
-            height: 100%;
+            width: 96%;
         }
         .banner__text {
             position: absolute;
@@ -108,7 +108,7 @@
             color: #989898;
             font-size: 18px;
             line-height: 1.5;
-            font-weight: 300;
+            font-weight: 400;
         }
         .banner__text-content.visible {
             opacity: 1;
@@ -222,6 +222,12 @@
             align-items: center;
             border-radius: 30px;
         }
+        .banner__button img {
+            position: absolute;
+            width: 172px;
+            bottom: 20px;
+        }
+
     </style>
 </head>
 <body>
@@ -313,7 +319,7 @@
     </div>
     <div class="banner__content">
         <div class="banner__logo">
-            <img src="img/logo.svg" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
         <div class="banner__text">
             <div class="banner__text-content visible">
@@ -329,6 +335,7 @@
     </div>
     <div class="banner__button">
         <a href="#"><span>Обрати квартиру</span></a>
+        <img src="img/intBud.png" alt="integral bud">
     </div>
 </div>
 
@@ -412,7 +419,7 @@
                 }
 
                 svg[0].classList.add('visible');
-                text[0].classList.add('visible');
+               // text[0].classList.add('visible');
                 clearInterval(int);
                 setTimeout(function () {
                     buttonWrapper.classList.add('isVisible');
