--- a/banner/336x280/index.html
+++ b/banner/336x280/index.html
@@ -108,7 +108,7 @@
             color: #989898;
             font-size: 18px;
             line-height: 1.5;
-            font-weight: 300;
+            font-weight: 400;
             padding-right: 5px;
         }
         .banner__text-content.visible {
@@ -223,6 +223,16 @@
             align-items: center;
             border-radius: 30px;
         }
+        .banner__button img {
+            position: absolute;
+            width: 244px;
+            bottom: 5px;
+        }
+
+        .banner__logo img {
+            width: 85%;
+        }
+
     </style>
 </head>
 <body>
@@ -314,7 +324,7 @@
     </div>
     <div class="banner__content">
         <div class="banner__logo">
-            <img src="img/logo.svg" alt="logo">
+            <img src="img/logo.png" alt="logo">
         </div>
         <div class="banner__text">
             <div class="banner__text-content visible">
@@ -330,6 +340,7 @@
     </div>
     <div class="banner__button">
         <a href="#"><span>Обрати квартиру</span></a>
+        <img src="img/intBud.png" alt="integral bud">
     </div>
 </div>
 
@@ -413,7 +424,7 @@
                 }
 
                 svg[0].classList.add('visible');
-                text[0].classList.add('visible');
+               // text[0].classList.add('visible');
                 clearInterval(int);
                 setTimeout(function () {
                     buttonWrapper.classList.add('isVisible');
