--- a/banner/800x400/index.html
+++ b/banner/800x400/index.html
@@ -127,7 +127,7 @@
             align-items: center;
             color: #989898;
             font-size: 28px;
-            font-weight: 300;
+            font-weight: 400;
         }
         .banner__text-content.visible {
             opacity: 1;
@@ -243,6 +243,12 @@
             align-items: center;
             border-radius: 30px;
         }
+        .banner__button img {
+            position: absolute;
+            width: 165px;
+            right: 5px;
+        }
+
     </style>
 </head>
 <body>
@@ -334,7 +340,7 @@
         </div>
         <div class="banner__content">
             <div class="banner__logo">
-                <img src="img/logo.svg" alt="logo">
+                <img src="img/logo.png" alt="logo">
             </div>
             <div class="banner__text">
                 <div class="banner__text-content visible">
@@ -350,6 +356,7 @@
         </div>
         <div class="banner__button">
             <a href="#"><span>Обрати квартиру</span></a>
+            <img src="img/intBud.png" alt="integral bud">
         </div>
     </div>
 
@@ -433,7 +440,7 @@
                     }
 
                     svg[0].classList.add('visible');
-                    text[0].classList.add('visible');
+                  //  text[0].classList.add('visible');
                     clearInterval(int);
                     setTimeout(function () {
                         buttonWrapper.classList.add('isVisible');
