--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             src: url("./Web-Regular.woff") format("woff");
         }
         body {
-            background-color: #333;
+            background-color: #00002c;
             font-family:CustomFont, sans-serif;
             height: 100vh;
         }
@@ -322,6 +322,12 @@
                 width: 200px;
                 right: 5%;
             }
+            .santa-hat{
+                right: -15px;
+                top: -37px;
+                width: 78px;
+                transform: rotate(358deg);
+            }
         }
     </style>
 </head>
@@ -330,7 +336,7 @@
 <div class="container pt-10 pb-5">
     <h1 class="text-light">До начала новой жизни осталось:</h1>
 
-    <div class="flipper" data-reverse="true" data-datetime="2022-01-14 00:18:00" data-template="dd|HH|ii|ss"
+    <div class="flipper" data-reverse="true" data-datetime="2022-01-14 00:23:00" data-template="dd|HH|ii|ss"
          data-labels="Дней|Часов|Минут|Секунд" id="myFlipper">
         <img src="./hat.png" class="santa-hat" alt="">
     </div>
