--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
         }
         .santa-hat{
             position: absolute;
-            right: -58px;
-            top: -60px;
+            right: -24px;
+            top: -136px;
             width: 160px;
             z-index: 31;
             transform: rotate(10deg);
@@ -323,10 +323,10 @@
                 right: 5%;
             }
             .santa-hat{
-                right: -15px;
-                top: -37px;
+                right: -8px;
+                top: -67px;
                 width: 78px;
-                transform: rotate(358deg);
+                transform: rotate(8deg);
             }
         }
     </style>
@@ -338,7 +338,7 @@
 
     <div class="flipper" data-reverse="true" data-datetime="2022-01-21 23:00:00" data-template="dd|HH|ii|ss"
          data-labels="Дней|Часов|Минут|Секунд" id="myFlipper">
-        <img src="./hat.png" class="santa-hat" alt="">
+        <img src="./crown.png" class="santa-hat" alt="">
     </div>
 
 </div>
