--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </header>
 
 <section id="start" class="banner">
+    <video autoplay muted loop class="banner_video">
+        <source src="./img/water_bg1.mp4" type="video/mp4">
+    </video>
     <div class="container">
         <div class="text"  data-aos="fade-up" data-aos-duration="600">
             <h1>
@@ -52,7 +55,7 @@
 <section id="about" class="about">
     <div class="container">
         <div class="section_title">
-            Про нас
+            Про бренд
         </div>
         <div class="about_content">
             <article class="about_text">
@@ -208,7 +211,26 @@
     </div>
 </section>
 
-<footer id="contacts">
+<section id="contacts" class="contacts">
+    <div class="container">
+        <div class="contacts_wrapper">
+            <article class="contacts_text" data-aos="fade-right" data-aos-duration="600">
+                <p class="title">Ми знаходимось</p>
+                <p class="desc">с.Нижнє Солотвино, б. 55 А.</p>
+                <p class="desc">Ужгородський р-н, Закарпатська обл</p>
+                <p class="title">Наш телефон</p>
+                <p class="desc"><a href="tel:+380681180326">+38(068)-118-03-26</a></p>
+                <p class="title">Наша пошта</p>
+                <p class="desc"><a href="mailto:aquariusgroupkiev@gmail.com">aquariusgroupkiev@gmail.com</a></p>
+            </article>
+            <div class="contacts_map" data-aos="fade-left" data-aos-duration="600">
+                <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29880.348414959353!2d22.42383111878598!3d48.55096339385076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473904ba3547d58b%3A0x4d17b634d9814cd0!2z0J3QuNC20L3QtdC1INCh0L7Qu9C-0YLQstC40L3Qviwg0JfQsNC60LDRgNC_0LDRgtGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA4OTQ0MQ!5e0!3m2!1sru!2sua!4v1725626099717!5m2!1suk!2sua" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer >
     <div class="container">
         <div class="footer_container">
             <div class="col">
