--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <a href="#about" class="menu_link">Про нас</a>
         <a href="#products" class="menu_link">Товари</a>
+        <a href="#factory" class="menu_link">Виробництво</a>
         <a href="#contacts" class="menu_link">Контакти</a>
-        <div class="line"></div>
     </div>
 </header>
 
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="text"  data-aos="fade-up" data-aos-duration="600">
             <h1>
-                <span>Крайна</span> — сила природи <br> в кожній краплині!
+                <span>Крайна</span> — Дика вода Закарпаття
             </h1>
             <h2>
                 Природна мінеральна вода «Крайна» — це енергія землі, втілена в кожній краплі.
@@ -47,7 +47,7 @@
         </div>
         <div class="image" data-aos="fade" data-aos-duration="1000">
             <img data-depth="0.6" src="./img/bottle.png" alt="water">
-            <div class="btn">Хочу спробувати</div>
+            <!--<div class="btn">Хочу спробувати</div>-->
         </div>
     </div>
 </section>
@@ -60,20 +60,12 @@
         <div class="about_content">
             <article class="about_text">
                 <p data-aos="fade-left" data-aos-duration="600">
-                    <b>"Вода питна Крайна"</b> - це бренд або торгова марка питної води, виробленої в Україні.
-                    Вченими доведено залежність між дефіцитом кремнію і ризиком розвитку серцево-судинної патології,
-                    туберкульозу, діабету, гепатиту, гіпертонії, катаракти, артриту і навіть раку. Щодняспоживаючи кремнієву
-                    воду Крайна ви піклуєтеся про своє здоров’я.
+                    <b>Мінеральна вода «Крайна»</b> – сповнена «Дикою» енергією природи та корисними мікроелементами.
+                    Вона освіжає, підтримує здоровʼя та енергію. Адже вона з джерела зарядженого на перемогу!
                 </p>
                 <p data-aos="fade-left" data-aos-duration="600">
-                    Високі стандарти якості та екологічно чисте виробництво. Природна мінеральна вода для тих, хтообирає здоров’я і якість.
-                    Натуральний склад і структура природної мінеральної води
-                </p>
-                <p data-aos="fade-left" data-aos-duration="600">
-                    Ми мінімізуємо вплив людського фактора для збереження первозданного якості нашої води.
-                    Ми зацікавлені в довгостроковому партнерстві, тому пропонуємо найвищу якість і бездоганний сервіс.
-                    Ми дбаємо про здоров’я наших клієнтів і стан природного середовища, тому гарантуємо збереженняприродної структури,
-                    унікальний мінеральний і хімічний баланс нашої води.
+                    Вода «Крайна» відрізняється дивовижним смаком «дикої» природи, адже видобувається практично без людського втручання.
+                    Це — перший в Україні виробник з унікальною безконтактною технологією бутилювання води.
                 </p>
             </article>
 
@@ -185,6 +177,11 @@
 </section>
 
 <section id="composition" class="composition">
+    <div class="container">
+        <div class="section_title">
+            <span>Склад</span>
+        </div>
+    </div>
     <div class="composition_wrapper">
         <div class="bottle">
             <img src="./img/bottle.png" alt="" >
@@ -207,6 +204,62 @@
         </div>
         <div class="composition_item ci_6" data-aos="fade-left" data-aos-duration="600">
             <b>Бікарбонат   </b> –  допомагає збалансувати кислотно-лужний баланс організму та сприяє легкому перетравлюванню.
+        </div>
+    </div>
+</section>
+
+<section id="factory" class="factory">
+    <div class="container">
+        <div class="section_title">Виробництво</div>
+        <div class="factory_wrapper">
+            <div class="factory_img" data-aos="fade-right" data-aos-duration="600">
+                <img src="./img/factory.png" alt="" loading="lazy">
+            </div>
+            <article class="factory_text">
+                <p data-aos="fade-left" data-aos-duration="600">
+                    Виробничі потужності розташовані у рекреаційній зоні Закарпаття, в селищі Нижнє Солотвино.
+                    Виробники зможли поєднати природність походження води та новітні технології.
+                </p>
+                <p data-aos="fade-left" data-aos-duration="600">
+                    Із надр карпатської землі виривається справжня дика вода Закарпаття.
+                    Вода проходить крізь шар вулканічних порід і виходить на поверхню під власним тиском.
+                    А добувається у рекреаційнах зонах, оточених гірським масивом та лісами.
+                    Вода розливається у пляшки у своєму первозданному вигляді прямо на місці витоку.
+                </p>
+                <p data-aos="fade-left" data-aos-duration="600">Це дозволяє зробити виробництво екологічним та зберегти природній склад води.</p>
+            </article>
+        </div>
+    </div>
+</section>
+
+<section id="healthy" class="healthy">
+    <div class="container">
+        <div class="healthy_wrapper">
+            <article class="healthy_text" data-aos="fade-left" data-aos-duration="600">
+                <p >
+                   <b>«КРАЙНА» покращує здоров’я та зміцнює імунітет</b>
+                </p>
+                <p >
+                    Споживання кремнієвої води Крайна це піклування про своє здоровʼя. 
+                    Вченими доведено залежність між дефіцитом кремнію і ризиком розвитку серцево-судинної патології,
+                    туберкульозу, діабету, гепатиту, гіпертонії, катаракти, артриту та навіть онко захворювань. 
+                    Кремній відповідає за позбавлення людини від шкідливих солей і металів. <br> Вода Крайна сприяє:
+                </p>
+                <ul >
+                    <li>поліпшенню імунітету;</li>
+                    <li>відновленню судинних стінок;</li>
+                    <li>нормалізації роботи кишкового тракту;</li>
+                    <li>зменшенню рівня цукру в крові;</li>
+                    <li>зниженню кількості холестерину;</li>
+                    <li>нормалізації функцій нирок, серця та печінки;</li>
+                    <li>поліпшенню процесу обміну речовин;</li>
+                    <li>зміцнює структуру волокон колагену</li>
+                </ul>
+                
+            </article>
+            <div class="healthy_img" data-aos="fade-right" data-aos-duration="600">
+                <img src="./img/healthy.jpg" alt="" loading="lazy">
+            </div>
         </div>
     </div>
 </section>
@@ -240,6 +293,7 @@
                 <div><b>Навігація</b></div>
                 <a href="#about" class="menu_link">Про нас</a>
                 <a href="#products" class="menu_link">Товари</a>
+                <a href="#factory" class="menu_link">Виробництво</a>
             </div>
             <div class="col">
                 <div><b>Контакти</b></div>
