--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <p class="title">МИ ЗНАХОДИМОСЬ</p>
                 <p class="desc">с.Нижнє Солотвино, б. 55 А.</p>
                 <p class="desc">Ужгородський р-н, Закарпатська обл</p>
-                <p class="title">НАШІ КОНТАКТИ</p>
+                <p class="title">КОНТАКТИ</p>
                 <p class="desc"><a href="tel:+380961308815">+38 096 130 88 15</a></p>
                 <p class="desc"><a href="https://krayna.ua/">krayna.ua</a></p>
                 <p class="desc"><a href="mailto:mail@krayna.ua">mail@krayna.ua</a></p>
