--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <h1>
                 <span>Крайна</span> — Дика вода Закарпаття
             </h1>
-            <h2>
+           <!-- <h2>
                 Природна мінеральна вода «Крайна» — це енергія землі, втілена в кожній краплі.
                 Насичена мінералами з глибинних джерел, вона заряджена силою природи та древніх традицій.
                 Відчуй справжню свободу і первозданну чистоту з кожним ковтком цієї унікальної води.
-            </h2>
+            </h2>-->
         </div>
         <div class="image" data-aos="fade" data-aos-duration="1000">
             <img data-depth="0.6" src="./img/bottle.png" alt="water">
@@ -185,7 +185,7 @@
 
     <div class="composition_wrapper">
         <div class="bottle">
-            <img src="./img/bottle.png" alt="" >
+            <img src="./img/bottle-1.png" alt="" >
         </div>
 
         <div class="composition_item ci_1" data-aos="fade-right" data-aos-duration="600">
@@ -268,13 +268,13 @@
         <div class="section_title">Контакти заводу виробника</div>
         <div class="contacts_wrapper">
             <article class="contacts_text" data-aos="fade-right" data-aos-duration="600">
-                <p class="title">МИ ЗНАХОДИМОСЬ</p>
+                <p class="title">Завод виробник води «КРАЙНА»</p>
                 <p class="desc">с.Нижнє Солотвино, б. 55 А.</p>
                 <p class="desc">Ужгородський р-н, Закарпатська обл</p>
-                <p class="title">КОНТАКТИ</p>
+<!--                <p class="title">КОНТАКТИ</p>-->
                 <p class="desc"><a href="tel:+380961308815">+38 096 130 88 15</a></p>
                 <p class="desc"><a href="https://krayna.ua/">krayna.ua</a></p>
-                <p class="desc"><a href="mailto:mail@krayna.ua">mail@krayna.ua</a></p>
+<!--                <p class="desc"><a href="mailto:mail@krayna.ua">mail@krayna.ua</a></p>-->
             </article>
             <div class="contacts_map" data-aos="fade-left" data-aos-duration="600">
                 <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29880.348414959353!2d22.42383111878598!3d48.55096339385076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473904ba3547d58b%3A0x4d17b634d9814cd0!2z0J3QuNC20L3QtdC1INCh0L7Qu9C-0YLQstC40L3Qviwg0JfQsNC60LDRgNC_0LDRgtGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA4OTQ0MQ!5e0!3m2!1sru!2sua!4v1725626099717!5m2!1suk!2sua" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -288,17 +288,19 @@
         <div class="footer_container">
             <div class="col">
                 <img src="./img/logo-krayna-1.png" alt="krayna" class="logo">
+                <p>Офіційний дистриб’ютор води КРАЙНА <br>
+                    <span>ТОВ «АКВАРІУС Груп»</span></p>
+            </div>
+            <div class="col">
+                <div><b>Контакти</b></div>
+                <a href="tel:+380681180326">+38(068)-118-03-26</a>
+                <a href="mailto:aquariusgroupkiev@gmail.com">aquariusgroupkiev@gmail.com</a>
             </div>
             <div class="col">
                 <div><b>Навігація</b></div>
                 <a href="#about" class="menu_link">Про нас</a>
                 <a href="#products" class="menu_link">Товари</a>
                 <a href="#factory" class="menu_link">Виробництво</a>
-            </div>
-            <div class="col">
-                <div><b>Контакти</b></div>
-                <a href="tel:+380681180326">+38(068)-118-03-26</a>
-                <a href="mailto:aquariusgroupkiev@gmail.com">aquariusgroupkiev@gmail.com</a>
             </div>
         </div>
     </div>
