--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 <img src="./img/logo-krayna-1.png" alt="krayna">
             </a>
         </div>
-        <a href="#about" class="menu_link">Про нас</a>
-        <a href="#products" class="menu_link">Товари</a>
-        <a href="#factory" class="menu_link">Виробництво</a>
-        <a href="#contacts" class="menu_link">Контакти</a>
+        <nav>
+            <a href="#about" class="menu_link">Про нас</a>
+            <a href="#products" class="menu_link">Товари</a>
+            <a href="#factory" class="menu_link">Виробництво</a>
+            <a href="#contacts" class="menu_link">Контакти</a>
+        </nav>
+        <div class="menu_btn"> <span></span></div>
     </div>
 </header>
 
@@ -209,6 +212,7 @@
     </div>
 </section>
 
+
 <section id="factory" class="factory">
     <div class="container">
         <div class="section_title">Виробництво</div>
@@ -265,7 +269,7 @@
 
 <section id="contacts" class="contacts">
     <div class="container">
-        <div class="section_title">Контакти заводу виробника</div>
+        <div class="section_title">Контакти виробника</div>
         <div class="contacts_wrapper">
             <article class="contacts_text" data-aos="fade-right" data-aos-duration="600">
                 <p class="title">Завод виробник води «КРАЙНА»</p>
