--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 </header>
 
 <section id="start" class="banner">
-    <video autoplay muted loop class="banner_video">
-        <source src="./img/water_bg1.mp4" type="video/mp4">
+    <img src="" data-src="./img/water_bg_mob.jpg" alt="" class="banner_video">
+    <video autoplay muted loop class="banner_video" data-src="./img/water_bg1.mp4">
+
     </video>
     <div class="container">
         <div class="text"  data-aos="fade-up" data-aos-duration="600">
