--- a/en/product/index.html
+++ b/en/product/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/assets/entry.7uKWYRpW.css">
-<link rel="modulepreload" as="script" crossorigin href="/assets/DLXeCyjy.js">
+<link rel="modulepreload" as="script" crossorigin href="/assets/pLsLbqKE.js">
 <link rel="prefetch" as="style" crossorigin href="/assets/index.B5SJZEK3.css">
-<link rel="prefetch" as="script" crossorigin href="/assets/2l25w00y.js">
-<link rel="prefetch" as="style" crossorigin href="/assets/default.DD9fw68z.css">
-<link rel="prefetch" as="script" crossorigin href="/assets/CPyfLpNv.js">
-<link rel="prefetch" as="script" crossorigin href="/assets/ciiWbmNN.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/IsBMYy40.js">
+<link rel="prefetch" as="style" crossorigin href="/assets/default.DqFKvSjB.css">
+<link rel="prefetch" as="script" crossorigin href="/assets/DYBgoko6.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/DzKMFJ7G.js">
 <link rel="prefetch" as="style" crossorigin href="/assets/error-404.BhW8MxZG.css">
-<link rel="prefetch" as="script" crossorigin href="/assets/CAFIFndo.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/Cjdx1Ffv.js">
 <link rel="prefetch" as="style" crossorigin href="/assets/error-500.CNK9b7VH.css">
-<link rel="prefetch" as="script" crossorigin href="/assets/DOGLNSpZ.js">
-<script type="module" src="/assets/DLXeCyjy.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1729523863028,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{i18n:{baseUrl:"",defaultLocale:"uk",defaultDirection:"ltr",strategy:"prefix_except_default",lazy:true,rootRedirect:"",routesNameSeparator:"___",defaultLocaleRouteNameSuffix:"default",skipSettingLocaleOnNavigate:false,differentDomains:false,trailingSlash:false,configLocales:[{code:"uk",name:"Українська",iso:"uk-UK",files:["lang/ua.json"]},{code:"en",name:"English",iso:"en-EN",files:["lang/en.json"]}],locales:{uk:{domain:""},en:{domain:""}},detectBrowserLanguage:false,experimental:{localeDetector:"",switchLocalePathLinkSSR:false,autoImportTranslationFunctions:false}}},app:{baseURL:"/",buildId:"f4b6c6ae-c6e2-42a2-9816-c14ac95362ff",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/assets/CBqvRdBE.js">
+<script type="module" src="/assets/pLsLbqKE.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1730112015788,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{i18n:{baseUrl:"",defaultLocale:"uk",defaultDirection:"ltr",strategy:"prefix_except_default",lazy:true,rootRedirect:"",routesNameSeparator:"___",defaultLocaleRouteNameSuffix:"default",skipSettingLocaleOnNavigate:false,differentDomains:false,trailingSlash:false,configLocales:[{code:"uk",name:"Українська",iso:"uk-UK",files:["lang/ua.json"]},{code:"en",name:"English",iso:"en-EN",files:["lang/en.json"]}],locales:{uk:{domain:""},en:{domain:""}},detectBrowserLanguage:false,experimental:{localeDetector:"",switchLocalePathLinkSSR:false,autoImportTranslationFunctions:false}}},app:{baseURL:"/",buildId:"88b02713-9de4-4afb-86f0-b7eb7bdceb51",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
